# AudioTheatre

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/config/: AudioTrimmer.css  AudioTrimmer.jsx  ConfigList.css  ConfigList.jsx  ConfigView.css  ConfigView.jsx  CueEditor.css  CueEditor.jsx  PictogramPicker.css  PictogramPicker.jsx  SceneEditor.jsx
src/components/representation/: CueCard.css  CueCard.jsx  CueList.css  CueList.jsx  CueListItem.css  CueListItem.jsx  KeyboardBar.css  KeyboardBar.jsx  ProgressBar.css  ProgressBar.jsx  RepresentationView.css  RepresentationView.jsx  SceneCard.css  SceneCard.jsx
src/context/: AppContext.js  appReducer.js
src/hooks/: useAudio.js  useKeyboard.js
src/styles/: tokens.css
src/utils/: configLoader.js  validators.js
